Added user authentication
