# API/src/routes/api/auth.ts
@@ -1,0 +1,7 @@
+import express, { Express, Request, Response } from 'express';
+import userController from '../../controllers/userController';
+const router = express.Router();
+
+router.route('/').post(userController.authUser);
+
+export const auth = router;
